Allow mapping of wireguard interface names (e.g. derived from filename) and native names. This is mostly the Linux implementation (and common code). This should also mostly cover Mac OS, although it needs testing. Windows is implemented slightly differently and is next.
There are also changes to help the credentials provider which will be piping in a configuration, not using a file.